--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "pm2:logs": "pm2 logs ecosystem.config.js"
   },
   "dependencies": {
+    "canvas": "^2.11.2",
+    "gif-encoder-2": "^1.0.5",
     "js-yaml": "^4.1.0",
     "mermaid": "^10.6.1",
     "next": "^14.0.0",
+    "openai": "^4.20.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^10.1.0",
